compiler/testData/multiplatform/regressions/incompatibleClassScopesWithImplTypeAlias/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/regressions/incompatibleClassScopesWithImplTypeAlias/jvm.kt:3:1: error: in class 'Writer' expected members have no actual ones:

    protected constructor Writer()

    The following declaration is incompatible because visibility is different:
        protected/*protected and package*/ constructor Writer()
    The following declaration is incompatible because number of value parameters is different:
        protected/*protected and package*/ constructor Writer(p0: Any!)

actual typealias Writer = java.io.Writer
^
